--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: objective-c
 before_install: "git submodule init && git submodule update && sudo gem update --system && sudo gem install bundler && bundle install"
 script: "bundle exec rake test --trace"
+notifications:
+  email:
+    - dang.than@mulodo.com
